added wordcounter.html link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Project 1</h5>
                         <p class="card-text">Simple Word Counter</p>
-                        <a href="#" class="btn btn-info">See project</a>
+                        <a href="wordcounter.html" class="btn btn-info">See project</a>
                     </div>
                 </div>
             </div>
