added div for h3 and text aling in style sheet

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
             </div>
         </div>
     </div>
-    <h3>Reach out...</h3>
+    <div class="reachOut">
+        <h3>Reach out...</h3>
+    </div>
     <!--social icons -->
     <div class="icons-social">
         <a target="_blank" href="https://github.com/flexdinesh">
