--- a/index.html
+++ b/index.html
@@ -83,34 +83,22 @@
             </div>
         </div>
     </div>
-    <div class="reachOut">
+    <div class="col-sm-6 reachOut">
         <h3>Reach out...</h3>
     </div>
     <!--social icons -->
     <div class="icons-social">
-        <a target="_blank" href="https://github.com/flexdinesh">
+        <a target="_blank" href="https://github.com/carlosg34">
             <i class="fab fa-github"></i>
         </a>
-        <a target="_blank" href="https://twitter.com/flexdinesh">
+        <a target="_blank" href="https://twitter.com/carlosalex101">
             <i class="fab fa-twitter"></i>
-        </a>
-        <a target="_blank" href="https://stackoverflow.com/story/flexdinesh">
-            <i class="fab fa-stack-overflow"></i>
         </a>
         <a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan">
             <i class="fab fa-linkedin"></i>
         </a>
-        <a target="_blank" href="https://medium.com/@flexdinesh">
-            <i class="fab fa-medium"></i>
-        </a>
-        <a target="_blank" href="https://www.freecodecamp.org">
-            <i class="fab fa-free-code-camp"></i>
-        </a>
-        <a target="_blank" href="https://www.behance.net">
-            <i class="fab fa-behance"></i>
-        </a>
-        <a target="_blank" href="https://codepen.io">
-            <i class="fab fa-codepen"></i>
+        <a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan">
+            <i class="fab fa-facebook"></i>
         </a>
     </div>
 
