--- a/index.html
+++ b/index.html
@@ -83,8 +83,18 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-6 reachOut">
+    <div class="col-sm-12 reachOut">
         <h3>Reach out...</h3>
+        <form action="mailto:01carlos.gls@gmail.com" method="post" enctype="text/plain">
+            Name:<br>
+            <input type="text" name="name"><br>
+            E-mail:<br>
+            <input type="text" name="mail"><br>
+            Comment:<br>
+            <input type="text" name="comment" size="50"><br><br>
+            <input type="submit" value="Send">
+        </form>
+
     </div>
     <!--social icons -->
     <div class="icons-social">
