Deleted form added email me

--- a/index.html
+++ b/index.html
@@ -85,16 +85,7 @@
     </div>
     <div class="col-sm-12 reachOut">
         <h3>Reach out...</h3>
-        <form action="mailto:01carlos.gls@gmail.com" method="post" enctype="text/plain">
-            Name:<br>
-            <input type="text" name="name"><br>
-            E-mail:<br>
-            <input type="text" name="mail"><br>
-            Comment:<br>
-            <input type="text" name="comment" size="50"><br><br>
-            <input type="submit" value="Send">
-        </form>
-
+        <a href="mailto:01carlos.gls@gmail.com">Email me</a>
     </div>
     <!--social icons -->
     <div class="icons-social">
