added photoblog site

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                     <img class="card-img-top" alt="Card header image" src="media\carStore.jpg">
                     <div class="card-body">
                         <h5 class="card-title">Project 3</h5>
-                        <p class="card-text">Car Store</p>
-                        <a href="#" class="btn btn-info">See project</a>
+                        <p class="card-text">Photo Blog</p>
+                        <a href="PhotoBlog\PhotoBlog.html" class="btn btn-info">See project</a>
                     </div>
                 </div>
             </div>
