--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Project 3</h5>
                         <p class="card-text">Photo Blog</p>
-                        <a href="PhotoBlog\PhotoBlog.html" class="btn btn-info">See project</a>
+                        <a href="PhotoBlog\photoBlog.html" class="btn btn-info">See project</a>
                     </div>
                 </div>
             </div>
