fixed little cams path

--- a/PhotoBlog/photoBlog.html
+++ b/PhotoBlog/photoBlog.html
@@ -12,9 +12,9 @@
 <body>
     <div>
         <div id="mainHeading">
-            <img id="camIcon1" src="C:\Users\Carlos\Pictures\Wallpapers\066074-rounded-glossy-black-icon-people-things-camera.png" alt="">
+            <img id="camIcon1" src="Wallpapers\066074-rounded-glossy-black-icon-people-things-camera.png" alt="">
             <h1>Welcome to my blog!</h1>
-            <img id="camIcon2" src="C:\Users\Carlos\Pictures\Wallpapers\066074-rounded-glossy-black-icon-people-things-camera.png" alt="">
+            <img id="camIcon2" src="Wallpapers\066074-rounded-glossy-black-icon-people-things-camera.png" alt="">
         </div>
         <nav class="navbar navbar-inverse">
             <div class="container">
