--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="col-sm-6 col-lg-3">
                 <div class="card">
-                    <img class="card-img-top" alt="Card header image" src="media\carStore.jpg">
+                    <img class="card-img-top" alt="Card header image" src="media\796351.jpg">
                     <div class="card-body">
                         <h5 class="card-title">Project 3</h5>
                         <p class="card-text">Photo Blog</p>
