added color guessing game path to card

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Project 2</h5>
                         <p class="card-text">Color Guessing Game</p>
-                        <a href="#" class="btn btn-info">See project</a>
+                        <a href="color_guessing_game/colorGuessingGame.html" class="btn btn-info">See project</a>
                     </div>
                 </div>
 
