added link to quiz app

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                     <img class="card-img-top" alt="Card header image" src="media\robotstore.jpg">
                     <div class="card-body">
                         <h5 class="card-title">Project 4</h5>
-                        <p class="card-text">Robot Store</p>
-                        <a href="#" class="btn btn-info">See project</a>
+                        <p class="card-text">Quiz App</p>
+                        <a href="quiz_app\index.html" class="btn btn-info">See project</a>
                     </div>
                 </div>
             </div>
