--- a/index.html
+++ b/index.html
@@ -82,10 +82,34 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-6 col-lg-3">
+                <div class="card">
+                    <img class="card-img-top" alt="Card header image" src="media\robotstore.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 4</h5>
+                        <p class="card-text">Quiz App</p>
+                        <a href="quiz_app\index.html" class="btn btn-info">See project</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-3">
+                <div class="card">
+                    <img class="card-img-top" alt="Card header image" src="media\robotstore.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 4</h5>
+                        <p class="card-text">Quiz App</p>
+                        <a href="quiz_app\index.html" class="btn btn-info">See project</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-sm-12 reachOut">
-        <h3>Reach out...</h3>
-        <a href="mailto:01carlos.gls@gmail.com">Email me</a>
+    <div class="row">
+        <div class="col-sm-12 reachOut">
+            <h3>Reach out...</h3>
+            <a href="mailto:01carlos.gls@gmail.com">Email me</a>
+        </div>
     </div>
     <!--social icons -->
     <div class="icons-social">
