added button for email me

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="row">
         <div class="col-sm-12 reachOut">
             <h3>Reach out...</h3>
-            <a href="mailto:01carlos.gls@gmail.com">Email me</a>
+            <a href="mailto:01carlos.gls@gmail.com" class="btn btn-dark">Email me</a>
         </div>
     </div>
     <!--social icons -->
