--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="row">
             <div class="col-sm-6 col-lg-3">
                 <div class="card">
-                    <img class="card-img-top" alt="Card header image" src="media\robotstore.jpg">
+                    <img class="card-img-top" alt="Card header image" src="media\screenshot.jpg">
                     <div class="card-body">
                         <h5 class="card-title">Project 4</h5>
                         <p class="card-text">Quiz App</p>
