added email icon

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!--social icons -->
     <div class="icons-social">
         <a target="_blank" href="mailto:01carlos.gls@gmail.com">
-            <i class="fab fa-envelope"></i>
+            <i class="fas fa-envelope"></i>
         </a>
         <a target="_blank" href="https://github.com/carlosg34">
             <i class="fab fa-github"></i>
