--- a/index.html
+++ b/index.html
@@ -106,29 +106,25 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-12 reachOut">
-            <h3>Reach out...</h3>
-            <a href="mailto:01carlos.gls@gmail.com" class="btn btn-dark">Email me</a>
+        <div class="col-sm-12 icons-social">
+            <a target="_blank" href="mailto:01carlos.gls@gmail.com">
+                <i class="fas fa-envelope"></i>
+            </a>
+            <a target="_blank" href="https://github.com/carlosg34">
+                <i class="fab fa-github"></i>
+            </a>
+            <a target="_blank" href="https://twitter.com/carlosalex101">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan">
+                <i class="fab fa-facebook"></i>
+            </a>
         </div>
     </div>
-    <!--social icons -->
-    <div class="icons-social">
-        <a target="_blank" href="mailto:01carlos.gls@gmail.com">
-            <i class="fas fa-envelope"></i>
-        </a>
-        <a target="_blank" href="https://github.com/carlosg34">
-            <i class="fab fa-github"></i>
-        </a>
-        <a target="_blank" href="https://twitter.com/carlosalex101">
-            <i class="fab fa-twitter"></i>
-        </a>
-        <a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan">
-            <i class="fab fa-linkedin"></i>
-        </a>
-        <a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan">
-            <i class="fab fa-facebook"></i>
-        </a>
-    </div>
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
