--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row footer">
         <div class="col-sm-12 icons-social">
             <a target="_blank" href="mailto:01carlos.gls@gmail.com">
                 <i class="fas fa-envelope"></i>
