--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@
                     </div>
                 </div>
             </div>
+            <div class="col-sm-6 col-lg-3">
+                <div class="card">
+                    <img class="card-img-top" alt="Card header image" src="media\796351.jpg">
+                    <div class="card-body">
+                        <h4 class="card-title">Education</h4>
+                        <!-- <p class="card-text">Quiz App</p> -->
+                        <a href="quiz_app\index.html" class="btn btn-info">See All</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row footer">
