--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
             </div>
             <div class="col-sm-6 col-lg-3">
                 <div class="card">
-                    <img class="card-img-top" alt="Card header image" src="media\796351.jpg">
+                    <img class="card-img-top" alt="Card header image" src="media\education.jpg">
                     <div class="card-body">
                         <h4 class="card-title">Education</h4>
                         <!-- <p class="card-text">Quiz App</p> -->
-                        <a href="quiz_app\index.html" class="btn btn-info">See All</a>
+                        <a href="quiz_app\index.html" class="btn btn-info">See more</a>
                     </div>
                 </div>
             </div>
