--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="container">
             <h1 class="display-3">Welcome to my portfolio</h1>
             <p class="lead">I am a full stack web developer. Check my work below.</p>
+            <div class="avatar" width="100px" height="100" backgroundcolor: "red"></div>
         </div>
     </div>
     <div class="container" style="margin-top:30px;">
