--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     </nav>
     <div class="jumbotron jumbotron-fluid p-4">
         <div class="container">
+            <div class="avatar">
+                <img src="avatar.jpg" alt="Picture of Carlos Gonzales">
+            </div>
             <h1 class="display-3">Welcome to my portfolio</h1>
             <p class="lead">I am a full stack web developer. Check my work below.</p>
-            <div class="avatar" width="100px" height="100" backgroundcolor: "red"></div>
         </div>
     </div>
     <div class="container" style="margin-top:30px;">
