--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="jumbotron jumbotron-fluid p-4">
         <div class="container">
             <div class="avatar">
-                <img src="avatar.jpg" alt="Picture of Carlos Gonzales">
+                <img src="media\avatar.jpg" alt="Picture of Carlos Gonzales">
             </div>
             <h1 class="display-3">Welcome to my portfolio</h1>
             <p class="lead">I am a full stack web developer. Check my work below.</p>
