--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="jumbotron jumbotron-fluid p-4">
         <div class="container">
             <div class="avatar">
-                <img src="media\avatar.jpg" alt="Picture of Carlos Gonzales">
+                <!-- <img src="media\avatar.jpg" alt="Picture of Carlos Gonzales"> -->
             </div>
             <h1 class="display-3">Welcome to my portfolio</h1>
             <p class="lead">I am a full stack web developer. Check my work below.</p>
@@ -110,8 +110,8 @@
                 <div class="card">
                     <img class="card-img-top" alt="Card header image" src="media\education.jpg">
                     <div class="card-body">
-                        <h4 class="card-title">Education</h4>
-                        <!-- <p class="card-text">Quiz App</p> -->
+                        <h5 class="card-title">Education</h5>
+                        <p class="card-text">Woz-U University</p>
                         <a href="quiz_app\index.html" class="btn btn-info">See more</a>
                     </div>
                 </div>
