--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
                     </div>
                 </div>
             </div>
+            <div class="col-sm-6 col-lg-3">
+                <div class="card">
+                    <img class="card-img-top" alt="Card header image" src="media\education.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">Education</h5>
+                        <p class="card-text">Woz-U University</p>
+                        <a href="quiz_app\index.html" class="btn btn-info">See more</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row footer">
@@ -135,6 +145,9 @@
             <a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan">
                 <i class="fab fa-facebook"></i>
             </a>
+            <div class="copyright">
+                <p>&copy Carlos 2018</p>
+            </div>
         </div>
     </div>
 
