added about page

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
                     <a href="#" class="nav-link">Blog</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#" class="nav-link">About</a>
-                </li>
-                <li class="navbar-item">
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="about.html" class="nav-link">About me</a>
                 </li>
             </ul>
         </div>
