--- a/about.html
+++ b/about.html
@@ -6,18 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About me</title>
+    <link rel=" stylesheet " href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css " integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm " crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div>
-        <h1>About me</h1>
-        <p>I create responsive websites that allow the user to experience your website in the best and most appropriate way suited to the device they are using. By working using progressive enhancement, your website is delivered with a responsive layout
-            that can best make use of the space available on the smallest to largest devices. Cross browser compatibility is ensured by using feature detection so older browsers still in use today provide a solid experience, whilst modern browsers can
-            go the next step and enhance a user’s time spent on your site. Writing semantic markup that is documented and easy to read means it can be maintained and scaled in the future, and allows co-workers to quickly work with it. Rather than create
-            websites on a page-by-page basis, I instead consider each element of your screen-based designs as separate components that can exist elsewhere on a website; outside of the context of your design compositions. With these components I produce
-            a style guide that acts as a document for a reusable and maintainable code base. All involved in a project can rely on a style guide to understand a project’s language and produce a more consistent user experience. My front-end build process
-            involves the use of tools such as Sass, Grunt, Gulp, Bower, and NPM to speed up development. I can quickly and efficiently join your team using continuous-integration with methods and tools such as Git, Jenkins, Agile/Scrum, and test/behaviour
-            driven development.</p>
+    <nav class="navbar navbar-light bg-light navbar-expand-md">
+        <a href="#" class="navbar-brand">My portfolio</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="navbar-item">
+                    <a href="index.html" class="nav-link">Home</a>
+                </li>
+                <li class="navbar-item">
+                    <a href="#" class="nav-link">Blog</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="jumbotron jumbotron-fluid about">
+        <div class="container">
+            <h1 class="display-4">About me</h1>
+            <p class="lead">I create responsive websites that allow the user to experience your website in the best and most appropriate way suited to the device they are using. By working using progressive enhancement, your website is delivered with a responsive layout
+                that can best make use of the space available on the smallest to largest devices. Cross browser compatibility is ensured by using feature detection so older browsers still in use today provide a solid experience, whilst modern browsers
+                can go the next step and enhance a user’s time spent on your site. Writing semantic markup that is documented and easy to read means it can be maintained and scaled in the future, and allows co-workers to quickly work with it. Rather than
+                create websites on a page-by-page basis, I instead consider each element of your screen-based designs as separate components that can exist elsewhere on a website; outside of the context of your design compositions. With these components
+                I produce a style guide that acts as a document for a reusable and maintainable code base. All involved in a project can rely on a style guide to understand a project’s language and produce a more consistent user experience. My front-end
+                build process involves the use of tools such as Sass, Grunt, Gulp, Bower, and NPM to speed up development. I can quickly and efficiently join your team using continuous-integration with methods and tools such as Git, Jenkins, Agile/Scrum,
+                and test/behaviour driven development.</p>
+        </div>
     </div>
 </body>
 
