--- a/index.html
+++ b/index.html
@@ -127,31 +127,31 @@
     </div>
     <div class="row footer">
         <div class="col-sm-12 icons-social">
-            <a target="_blank" href="mailto:01carlos.gls@gmail.com">
-                <i class="fas fa-envelope"></i>
+            <a target="_blank" href="mailto:01carlos.gls@gmail.com" style="text-decoration: none">
+                <i class=" fas fa-envelope "></i>
             </a>
-            <a target="_blank" href="https://github.com/carlosg34">
-                <i class="fab fa-github"></i>
+            <a target="_blank " href="https://github.com/carlosg34 " style="text-decoration: none ">
+                <i class=" fab fa-github "></i>
             </a>
-            <a target="_blank" href="https://twitter.com/carlosalex101">
-                <i class="fab fa-twitter"></i>
+            <a target="_blank " href="https://twitter.com/carlosalex101 " style="text-decoration: none ">
+                <i class=" fab fa-twitter "></i>
             </a>
-            <a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan">
-                <i class="fab fa-linkedin"></i>
+            <a target="_blank " href="https://www.linkedin.com/in/dineshpandiyan " style="text-decoration: none ">
+                <i class="fab fa-linkedin "></i>
             </a>
-            <a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan">
-                <i class="fab fa-facebook"></i>
+            <a target="_blank " href="https://www.linkedin.com/in/dineshpandiyan " style="text-decoration: none ">
+                <i class=" fab fa-facebook "></i>
             </a>
-            <div class="copyright">
+            <div class="copyright ">
                 <p>&copy Carlos 2018</p>
             </div>
         </div>
     </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
 </body>
 
 
