--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Project 1</h5>
                         <p class="card-text">Simple Word Counter</p>
-                        <a href="word_counter/wordcounter.html" class="btn btn-info">See project</a>
+                        <a href="word_counter/wordcounter.html" class="btn btn-info" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Project 2</h5>
                         <p class="card-text">Color Guessing Game</p>
-                        <a href="color_guessing_game/colorGuessingGame.html" class="btn btn-info">See project</a>
+                        <a href="color_guessing_game/colorGuessingGame.html" class="btn btn-info" target="_blank">See project</a>
                     </div>
                 </div>
 
@@ -67,7 +67,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Project 3</h5>
                         <p class="card-text">Photo Blog</p>
-                        <a href="PhotoBlog\photoBlog.html" class="btn btn-info">See project</a>
+                        <a href="PhotoBlog\photoBlog.html" class="btn btn-info" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Project 4</h5>
                         <p class="card-text">Quiz App</p>
-                        <a href="quiz_app\index.html" class="btn btn-info">See project</a>
+                        <a href="quiz_app\index.html" class="btn btn-info" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Project 4</h5>
                         <p class="card-text">Quiz App</p>
-                        <a href="quiz_app\index.html" class="btn btn-info">See project</a>
+                        <a href="quiz_app\index.html" class="btn btn-info" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Project 4</h5>
                         <p class="card-text">Quiz App</p>
-                        <a href="quiz_app\index.html" class="btn btn-info">See project</a>
+                        <a href="quiz_app\index.html" class="btn btn-info" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Education</h5>
                         <p class="card-text">Woz-U University</p>
-                        <a href="quiz_app\index.html" class="btn btn-info">See more</a>
+                        <a href="quiz_app\index.html" class="btn btn-info" target="_blank">See more</a>
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Education</h5>
                         <p class="card-text">Woz-U University</p>
-                        <a href="quiz_app\index.html" class="btn btn-info">See more</a>
+                        <a href="quiz_app\index.html" class="btn btn-info" target="_blank">See more</a>
                     </div>
                 </div>
             </div>
