added education page

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Education</h5>
                         <p class="card-text">Woz-U University</p>
-                        <a href="quiz_app\index.html" class="btn btn-info" target="_blank">See more</a>
+                        <a href="education.html" class="btn btn-info" target="_blank">See more</a>
                     </div>
                 </div>
             </div>
