removed links for linkId & FB

--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
             <a target="_blank " href="https://twitter.com/carlosalex101 " style="text-decoration: none ">
                 <i class=" fab fa-twitter "></i>
             </a>
-            <a target="_blank " href="https://www.linkedin.com/in/dineshpandiyan " style="text-decoration: none ">
+            <a target="_blank " href="#" style="text-decoration: none ">
                 <i class="fab fa-linkedin "></i>
             </a>
-            <a target="_blank " href="https://www.linkedin.com/in/dineshpandiyan " style="text-decoration: none ">
+            <a target="_blank " href="#" style="text-decoration: none ">
                 <i class=" fab fa-facebook "></i>
             </a>
             <div class="copyright ">
