--- a/education.html
+++ b/education.html
@@ -5,21 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>My Training</title>
+    <link rel="stylesheet" href="edu.css">
 </head>
 
 <body>
-    <ul>
-        <li>
-            <h3>Full stack Web Developer</h3>
-        </li>
-        <li>
-            <h3>The complete Web Developer Bootcamp</h3>
-        </li>
-        <li>
-            <h3>The Complete Web Developer in 2018: Zero to Mastery</h3>
-        </li>
-    </ul>
+    <div class="content">
+        <ul>
+            <li>
+                <h3>FULL STACK WEB DEVELOPER => <span>Woz-U</span></h3>
+                <p>---- TECHNOLOGIES LEARNED ----</p>
+                <p class="technologies">HTML, CSS, JavaScript, Bootstrap, Jquery, ReactJs, NodeJs, Express, Postman, Command line, Git, Github, SQL, NoSql, Proyect Management, Deployment on AWS, Travis CI, HTTP and Servers, Data Persistence, Sequelize, RESTful, Security, Autentication,
+                    Debugging, APIs, Mobile Apps in Cordova/Ioninc</p>
+            </li>
+            <li>
+                <h3>THE COMPLETE WEB DEVELOPER BOOTCAMP => <span>Udemy</span></h3>
+                <p>----TECHNOLOGIES LEARNED----</p>
+                <p class="technologies">HTML, CSS, JavaScript, Bootstrap, Jquery, NodeJs, Express, Postman, Command line, Git, Github, Databases, Deployment on Heroku, HTTP and Servers, Data Persistence, RESTful, Security, Autentication, APIs, RESTful Routing</p>
+            </li>
+            <li>
+                <h3>THE COPLETE WEB DEVELOPER IN 2018: ZERO TO MASTERY => <span>Udemy</span></h3>
+                <p>----TECHNOLOGIES LEARNED----</p>
+                <p class="technologies">HTML, CSS, JavaScript, Bootstrap, Jquery, ReactJs, Redux, NodeJs, Express, Postman, Command line, Git, Github, Databases, Deployment on Heroku, HTTP and Servers, Data Persistence, RESTful, Security, Autentication, APIs, RESTful Routing</p>
+            </li>
+            <li>
+                <h3>Countless tutorials online</h3>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
