--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             <div class="col-sm-6 col-lg-3">
                 <div class="card">
-                    <img class="card-img-top" alt="Card header image" src="media\education.jpg">
+                    <img class="card-img-top" alt="Card header image" src="media\todo.jpeg">
                     <div class="card-body">
                         <h5 class="card-title">Education</h5>
                         <p class="card-text">Woz-U University</p>
