--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <div class="card">
                     <img class="card-img-top" alt="Card header image" src="media\todo.jpeg">
                     <div class="card-body">
-                        <h5 class="card-title">Education</h5>
-                        <p class="card-text">Woz-U University</p>
+                        <h5 class="card-title">Project</h5>
+                        <p class="card-text">Todo App</p>
                         <a href="quiz_app\index.html" class="btn btn-info" target="_blank">See more</a>
                     </div>
                 </div>
