--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav class="navbar navbar-light bg-light navbar-expand-md">
-        <a href="#" class="navbar-brand">My portfolio</a>
+        <a href="#" class="navbar-brand">Carlos G</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
         </button>
