--- a/word_counter/wordcounter.html
+++ b/word_counter/wordcounter.html
@@ -11,10 +11,12 @@
 
 <body>
     <div class="container">
-        <h1>This is a simple Word Counter</h1>
-        <textarea id="userText" cols="75" rows="10" placeholder="Enter Text Here"></textarea>
+        <div class="flex-title">
+            <h1>This is a simple Word Counter</h1>
+        </div>
+        <textarea id="userText" cols="90" rows="8" placeholder="Enter Text Here"></textarea>
         <br>
-        <button type="button" class="btn btn-secondary" onclick="getResults()">ANALIZE</button>
+        <button type="button" class="btn" onclick="getResults()">ANALIZE</button>
         <br>
         <p id="words"></p>
         <br>
