--- a/color_guessing_game/colorGuessingGame.html
+++ b/color_guessing_game/colorGuessingGame.html
@@ -19,6 +19,7 @@
         <span id="message"></span>
         <button class="mode">Easy</button>
         <button id="hardBtn" class="mode selected">Hard</button>
+        <button id="" class="instructions">Instructions</button>
     </div>
     <div id="container">
         <div class="square"></div>
