--- a/color_guessing_game/colorGuessingGame.html
+++ b/color_guessing_game/colorGuessingGame.html
@@ -12,13 +12,17 @@
 <body>
 
 
-    <h1>The Great <br><span id="colorDisplay">RGB</span></br> Color Guessing Game</h1>
+    <h1>The Great
+        <br>
+        <span id="colorDisplay">RGB</span>
+        </br> Color Guessing Game</h1>
 
     <div id="messageDiv">
         <button id="resetButton">New colors</button>
         <span id="message"></span>
         <button class="mode">Easy</button>
         <button id="hardBtn" class="mode selected">Hard</button>
+        <button id="" class="instructions">Instructions</button>
     </div>
     <div id="container">
         <div class="square"></div>
