--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                     <img class="card-img-top" alt="Card header image" src="media\Screenshot.jpg">
                     <div class="card-body">
                         <h5 class="card-title">Project 4</h5>
-                        <p class="card-text">Quiz App</p>
-                        <a href="quiz_app\index.html" class="btn btn-info" target="_blank">See project</a>
+                        <p class="card-text">Camibook</p>
+                        <a href="https://camibookapp.herokuapp.com/" class="btn btn-info" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
@@ -134,14 +134,8 @@
             <a target="_blank " href="https://github.com/carlosg34 " style="text-decoration: none ">
                 <i class=" fab fa-github "></i>
             </a>
-            <a target="_blank " href="https://twitter.com/carlosalex101 " style="text-decoration: none ">
-                <i class=" fab fa-twitter "></i>
-            </a>
             <a target="_blank " href="https://linkedin.com/in/carlosg34" style="text-decoration: none ">
                 <i class="fab fa-linkedin "></i>
-            </a>
-            <a target="_blank " href="#" style="text-decoration: none ">
-                <i class=" fab fa-facebook "></i>
             </a>
             <div class="copyright ">
                 <p>&copy Carlos 2018</p>
