--- a/education.html
+++ b/education.html
@@ -13,23 +13,32 @@
     <div class="content">
         <ul>
             <li>
-                <h3>FULL STACK WEB DEVELOPER => <span>Woz-U</span></h3>
+                <h3>FULL STACK WEB DEVELOPER =>
+                    <span>Woz-U</span>
+                </h3>
                 <p>---- TECHNOLOGIES LEARNED ----</p>
-                <p class="technologies">HTML, CSS, JavaScript, Bootstrap, Jquery, ReactJs, NodeJs, Express, Postman, Command line, Git, Github, SQL, NoSql, Proyect Management, Deployment on AWS, Travis CI, HTTP and Servers, Data Persistence, Sequelize, RESTful, Security, Autentication,
-                    Debugging, APIs, Mobile Apps in Cordova/Ioninc</p>
+                <p class="technologies">HTML, CSS, JavaScript, Bootstrap, Jquery, ReactJs, NodeJs, Express, Postman, Command line, Git, Github, SQL,
+                    NoSql, Proyect Management, Deployment on AWS, Travis CI, HTTP and Servers, Data Persistence, Sequelize,
+                    RESTful APIs, Web Security, Autentication, Debugging, Mobile Apps in Cordova/Ioninc</p>
             </li>
             <li>
-                <h3>THE COMPLETE WEB DEVELOPER BOOTCAMP => <span>Udemy</span></h3>
+                <h3>THE COMPLETE WEB DEVELOPER BOOTCAMP =>
+                    <span>Udemy</span>
+                </h3>
                 <p>----TECHNOLOGIES LEARNED----</p>
-                <p class="technologies">HTML, CSS, JavaScript, Bootstrap, Jquery, NodeJs, Express, Postman, Command line, Git, Github, Databases, Deployment on Heroku, HTTP and Servers, Data Persistence, RESTful, Security, Autentication, APIs, RESTful Routing</p>
+                <p class="technologies">HTML, CSS, JavaScript, Bootstrap, Jquery, NodeJs, Express, Postman, Command line, Git, Github, Databases,
+                    Deployment on Heroku, HTTP and Servers, Data Persistence, RESTful, Security, Autentication, APIs, RESTful
+                    Routing
+                </p>
             </li>
             <li>
-                <h3>THE COPLETE WEB DEVELOPER IN 2018: ZERO TO MASTERY => <span>Udemy</span></h3>
+                <h3>THE COPLETE WEB DEVELOPER IN 2018: ZERO TO MASTERY =>
+                    <span>Udemy</span>
+                </h3>
                 <p>----TECHNOLOGIES LEARNED----</p>
-                <p class="technologies">HTML, CSS, JavaScript, Bootstrap, Jquery, ReactJs, Redux, NodeJs, Express, Postman, Command line, Git, Github, Databases, Deployment on Heroku, HTTP and Servers, Data Persistence, RESTful, Security, Autentication, APIs, RESTful Routing</p>
-            </li>
-            <li>
-                <h3>Countless tutorials online</h3>
+                <p class="technologies">HTML, CSS, JavaScript, Bootstrap, Jquery, ReactJs, Redux, NodeJs, Express, Postman, Command line, Git, Github,
+                    Databases, Deployment on Heroku, HTTP and Servers, Data Persistence, RESTful, Security, Autentication,
+                    APIs, RESTful Routing</p>
             </li>
         </ul>
     </div>
