--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@
 
 <body>
     <nav class="navbar navbar-light bg-light navbar-expand-md">
-        <a href="#" class="navbar-brand">Carlos G</a>
+        <a href="index.html" class="navbar-brand">Carlos G</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="navbar-item">
-                    <a href="#" class="nav-link">Blog</a>
-                </li>
                 <li class="navbar-item">
                     <a href="about.html" class="nav-link">About me</a>
                 </li>
@@ -36,18 +33,17 @@
                 <!-- <img src="media\avatar.jpg" alt="Picture of Carlos Gonzales"> -->
             </div>
             <h1 class="display-3">Welcome to my portfolio</h1>
-            <p class="lead">I am a full stack web developer. Check my work below.</p>
+            <p class="lead">I am a full stack Web Developer. Check out some of my work below.</p>
         </div>
     </div>
     <div class="container" style="margin-top:30px;">
         <div class="row">
             <div class="col-sm-6 col-lg-3">
                 <div class="card">
-                    <img class="card-img-top" alt="Card header image" src="media\wordCounter.png">
+                    <img class="card-img-top" alt="Card header image" src="media\camibook.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Project 1</h5>
-                        <p class="card-text">Simple Word Counter</p>
-                        <a href="word_counter/wordcounter.html" class="btn btn-info" target="_blank">See project</a>
+                        <h4 class="card-title">Camibook</h4>
+                        <a href="https://camibookapp.herokuapp.com/" class="btn btn-info" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
@@ -55,8 +51,7 @@
                 <div class="card">
                     <img class="card-img-top" alt="Card header image" src="media\colorguessinggame.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Project 2</h5>
-                        <p class="card-text">Color Guessing Game</p>
+                        <h5 class="card-title">Color Guessing Game</h5>
                         <a href="color_guessing_game/colorGuessingGame.html" class="btn btn-info" target="_blank">See project</a>
                     </div>
                 </div>
@@ -64,20 +59,18 @@
             </div>
             <div class="col-sm-6 col-lg-3">
                 <div class="card">
-                    <img class="card-img-top" alt="Card header image" src="media\796351.jpg">
+                    <img class="card-img-top" alt="Card header image" src="media\gallery.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Project 3</h5>
-                        <p class="card-text">Photo Blog</p>
-                        <a href="PhotoBlog\photoBlog.html" class="btn btn-info" target="_blank">See project</a>
+                        <h4 class="card-title">Photo Gallery</h4>
+                        <a href="Gallery/index.html" class="btn btn-info" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-3">
                 <div class="card">
-                    <img class="card-img-top" alt="Card header image" src="media\robotstore.jpg">
+                    <img class="card-img-top" alt="Card header image" src="media\Screenshot.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Project 4</h5>
-                        <p class="card-text">Quiz App</p>
+                        <h4 class="card-title">Quiz App</h4>
                         <a href="quiz_app\index.html" class="btn btn-info" target="_blank">See project</a>
                     </div>
                 </div>
@@ -86,41 +79,37 @@
         <div class="row">
             <div class="col-sm-6 col-lg-3">
                 <div class="card">
-                    <img class="card-img-top" alt="Card header image" src="media\Screenshot.jpg">
+                    <img class="card-img-top" alt="Card header image" src="media\wordcounter.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Project 4</h5>
-                        <p class="card-text">Camibook</p>
-                        <a href="https://camibookapp.herokuapp.com/" class="btn btn-info" target="_blank">See project</a>
+                        <h4 class="card-title">Word Counter</h4>
+                        <a href="word_counter/wordcounter.html" class="btn btn-info" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-3">
                 <div class="card">
-                    <img class="card-img-top" alt="Card header image" src="media\robotstore.jpg">
+                    <img class="card-img-top" alt="Card header image" src="media\budget.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Project 4</h5>
-                        <p class="card-text">Quiz App</p>
-                        <a href="quiz_app\index.html" class="btn btn-info" target="_blank">See project</a>
+                        <h4 class="card-title">Budget App</h4>
+                        <a href="simple_budget_app/index.html" class="btn btn-info" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-3">
                 <div class="card">
-                    <img class="card-img-top" alt="Card header image" src="media\todo.jpeg">
+                    <img class="card-img-top" alt="Card header image" src="media\todos.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Project</h5>
-                        <p class="card-text">Todo App</p>
-                        <a href="quiz_app\index.html" class="btn btn-info" target="_blank">See more</a>
+                        <h4 class="card-title">Todo App</h4>
+                        <a href="https://my-todos-list-app.herokuapp.com/" class="btn btn-info" target="_blank">See more</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-3">
                 <div class="card">
-                    <img class="card-img-top" alt="Card header image" src="media\education.jpg">
+                    <img class="card-img-top" alt="Card header image" src="">
                     <div class="card-body">
-                        <h5 class="card-title">Education</h5>
-                        <p class="card-text">Woz-U University</p>
-                        <a href="education.html" class="btn btn-info" target="_blank">See more</a>
+                        <h4 class="card-title">Project</h4>
+                        <a href="#" class="btn btn-info" target="_blank">See more</a>
                     </div>
                 </div>
             </div>
