--- a/about.html
+++ b/about.html
@@ -31,7 +31,16 @@
             <p class="lead">I am a Web Developer with a passion for creating websites and web applications</p>
             <p class="lead">I studied and graduated with a Full Stack Web Developer Certification from Woz-U University with more than 700
                 hours of study</p>
-            <p class="lead">I have also taken some other web development training couses online</p>
+            <p class="lead">I have also taken some other web development training couses online including the following courses:</p>
+            <p class="lead">
+                <strong>Courses</strong>
+            </p>
+            <ul>
+                <li>The complete web developers bootcamp</li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </div>
     </div>
 </body>
