--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
     <div class="jumbotron jumbotron-fluid p-4">
         <div class="container">
             <div class="avatar">
-                <!-- <img src="media\avatar.jpg" alt="Picture of Carlos Gonzales"> -->
             </div>
             <h1 class="display-3">Welcome to my portfolio</h1>
-            <p class="lead">I am a full stack Web Developer. Check out some of my work below.</p>
+            <p class="lead">I am a full stack Web Developer. Below are some of the things I've worked on and learned how to create.</p>
         </div>
     </div>
     <div class="container" style="margin-top:30px;">
@@ -106,10 +105,10 @@
             </div>
             <div class="col-sm-6 col-lg-3">
                 <div class="card">
-                    <img class="card-img-top" alt="Card header image" src="">
+                    <img class="card-img-top" alt="Card header image" src="media/repofetcher.jpg">
                     <div class="card-body">
-                        <h4 class="card-title">Project</h4>
-                        <a href="#" class="btn btn-info" target="_blank">See more</a>
+                        <h4 class="card-title">Repo Fetcher</h4>
+                        <a href="https://repofetcher.herokuapp.com/" class="btn btn-info" target="_blank">See more</a>
                     </div>
                 </div>
             </div>
