--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>RWD final project</title>
+    <title>Wildlife Gallery</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Neucha" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -49,7 +49,7 @@
         <hr>
         <div class="row vid">
             <div class="col-sm-3">
-                <video controls width="100%" height="auto" poster="media/Screenshot2.png">
+                <video controls width="100%" height="auto" poster="media/video1bg.jpg">
                     <source src="media/Beautiful Wildlife.mp4" type="video/mp4" />
                     <img src="media/elephant.jpeg" title="Your browser does not support video playback, update your browser!" />
                 </video>
